--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header>
+    <a href="#">
+        <div id="logo">
+          <img
+            src="../../../assets/img/truck.jpg"
+            id="imgLogo"
+            onclick="loadHomePage()"
+            width="60"
+            height="60"
+          />
+          <h1 id="nomeLogo">Sun Company</h1>
+        </div>
+      </a>
+      <nav id="cabecalho">
+        <div id="foto">
+            <img src="../../../assets/img/foto.jpg" width="70" height="70"/>
+        </div>
+      </nav>
+</header>
