--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer id="rodape">
+    <p>Jonathan Ilchemin Ribeiro</p>
+    <p>Lucas Queiroz Rocha Dos Reis</p>
+    <p>Maria Júlia Testoni</p>
+  </footer>
