--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,19 @@
-<h1>teste</h1>
+<div class="container">
+  <div class="content">
+    <h1>Sobre nós</h1>
+    <p>
+      Somos uma empresa dedicada a fornecer soluções confiáveis e eficientes no
+      setor de caminhões e entregas. Com uma vasta experiência no mercado,
+      estamos comprometidos em superar as expectativas dos nossos clientes e
+      oferecer serviços de qualidade incomparável. Nossa equipe é composta por
+      profissionais altamente capacitados e apaixonados pelo que fazem.
+      Trabalhamos em estreita colaboração com nossos clientes para entender suas
+      necessidades específicas e oferecer soluções personalizadas que atendam
+      aos seus objetivos de negócio. Nosso compromisso com a excelência nos
+      impulsiona a buscar constantemente a inovação e a melhoria contínua.
+      Mantemos-nos atualizados com as últimas tendências e melhores práticas do
+      setor, a fim de oferecer serviços de transporte cada vez mais eficientes e
+      sustentáveis.
+    </p>
+  </div>
+</div>
