--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,7 +1,13 @@
 <div class="card">
-<div class="header"></div>
-<div class="container"></div>
-<div class="footer"></div>
-
-
+  <div class="header">
+    <img src="{{ linkFoto }}" alt="" />
+  </div>
+  <div class="container">
+    <p>{{ nome }}</p>
+    <p>{{ propriedade1 }}</p>
+    <p>{{ propriedade2 }}</p>
+  </div>
+  <div class="footer">
+    {{email}}
+  </div>
 </div>
