--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,19 +1,24 @@
 <header>
-    <a href="#">
-        <div id="logo">
-          <img
-            src="../../../assets/img/truck.jpg"
-            id="imgLogo"
-            onclick="loadHomePage()"
-            width="60"
-            height="60"
-          />
-          <h1 id="nomeLogo">Sun Company</h1>
-        </div>
-      </a>
-      <nav id="cabecalho">
-        <div id="foto">
-            <img src="../../../assets/img/foto.jpg" width="70" height="70"/>
-        </div>
-      </nav>
+  <a href="#">
+    <div id="logo">
+      <img
+        src="../../../assets/img/truck.jpg"
+        id="imgLogo"
+        onclick="loadHomePage()"
+        width="60"
+        height="60"
+      />
+      <h1 id="nomeLogo">Sun Company</h1>
+    </div>
+  </a>
+  <menu>
+    <a href="#"><p>Home</p> </a>
+    <a href="#"><p>Funcionários</p> </a>
+  </menu>
+
+  <nav id="cabecalho">
+    <div id="foto">
+      <img src="../../../assets/img/foto.jpg" width="70" height="70" />
+    </div>
+  </nav>
 </header>
