Redirecionar paginas + email

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,8 +12,8 @@
     </div>
   </a>
   <menu>
-    <a href="#"><p>Home</p> </a>
-    <a href="#"><p>Funcionários</p> </a>
+    <a (click)="navegarHome()"><p>Home</p></a>
+    <a (click)="navegarFuncionarios()"><p>Funcionários</p></a>
   </menu>
 
   <nav id="cabecalho">
