--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -7,7 +7,7 @@
     <p>{{ propriedade1 }}</p>
     <p>{{ propriedade2 }}</p>
   </div>
-  <div class="footer" (click)="abrirOutlook()">
+  <button class="footer" (click)="abrirOutlook()">
     {{ email }}
-  </div>
+  </button>
 </div>
