--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="header">
-    <img src="{{ linkFoto }}" alt="" />
+    <img [src]="linkFoto" alt="" />
   </div>
   <div class="container">
     <p>{{ nome }}</p>
