--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
   <menu>
     <a (click)="navegarHome()"><p>Home</p></a>
     <a (click)="navegarFuncionarios()"><p>Funcionários</p></a>
-    <a (click)="navegarFuncionarios()"><p>Cadastro2</p></a>
+    <a (click)="navegarCadastro2()"><p>Cadastro2</p></a>
   </menu>
 
   <nav id="cabecalho">
