--- a/src/app/components/cadastro2/cadastro2.component.html
+++ b/src/app/components/cadastro2/cadastro2.component.html
@@ -1,3 +1,32 @@
 <body>
-    <h1>teste</h1>
+    <div class="container">
+        <form>
+            <label for="id">ID:</label>
+            <input type="text" id="id" name="id" required>
+            <button class="btn-consultar" type="submit">Consultar</button>
+        </form>
+        <div id="result">
+            <h1>Detalhes do Funcionário</h1>
+            <div class="field">
+              <label for="id">ID:</label>
+              <span id="id"></span>
+            </div>
+            <div class="field">
+              <label for="nome">Nome:</label>
+              <span id="nome"></span>
+            </div>
+            <div class="field">
+              <label for="departamento">Departamento:</label>
+              <span id="departamento"></span>
+            </div>
+            <div class="field">
+              <label for="endereco">Endereço:</label>
+              <span id="endereco"></span>
+            </div>
+            <div class="field">
+              <label for="email">E-mail:</label>
+              <span id="email"></span>
+            </div>
+        </div>
+    </div>
 </body>
