--- a/src/app/components/cadastro2/cadastro2.component.scss
+++ b/src/app/components/cadastro2/cadastro2.component.scss
@@ -1,3 +1,22 @@
 body{
-    margin-top: 15vh;
-}
+    padding: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    z-index: 1;
+    margin-top: 90px;
+  }
+
+  .container {
+    justify-content: center;
+    align-items: center;
+  }
+
+  form {
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+  }
+
+  .field {
+    
+  }
