--- a/src/app/components/cadastro2/cadastro2.component.html
+++ b/src/app/components/cadastro2/cadastro2.component.html
@@ -8,7 +8,7 @@
     <div id="result">
       <form [formGroup]="formValues">
         <h1>Detalhes do funcionario(a)</h1>
-        <div>
+        <div class="container">
           <label for="id">ID:</label> <input formControlName="id"/>
           <label for="nome">ID:</label> <input formControlName="nome"/>
           <label for="departamento">ID:</label> <input formControlName="departamento"/>
