--- a/src/app/components/cadastro2/cadastro2.component.scss
+++ b/src/app/components/cadastro2/cadastro2.component.scss
@@ -7,6 +7,8 @@ body{
   }
 
   .container {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -18,5 +20,5 @@ body{
   }
 
   .field {
-    
+
   }
