--- a/src/app/components/cadastro2/cadastro2.component.html
+++ b/src/app/components/cadastro2/cadastro2.component.html
@@ -16,6 +16,11 @@
           <label for="email">ID:</label> <input formControlName="email"/>
         </div>
       </form>
+
+      <button (click)="delete()">Deletar</button>
+      <div class="alert alert-primary" role="alert">
+        A simple primary alert—check it out!
+      </div>
     </div>
   </div>
 </body>
