feito html/insert

--- a/src/app/components/cadastro2/cadastro2.component.scss
+++ b/src/app/components/cadastro2/cadastro2.component.scss
@@ -27,6 +27,10 @@ button:hover {
   color: black;
 }
 
+h1 {
+  font-family: "Times New Roman", Times, serif;
+}
+
 form {
   margin-bottom: 50px;
   display: flex;
